Update call deprecated in Java 9